--- a/project.html
+++ b/project.html
@@ -114,7 +114,7 @@
                             the
                             card's
                             content.</p>
-                        <a href="./pn/pncoffee.html" class="btn btn-primary"
+                        <a href="./pncoffe/pncoffee.html" class="btn btn-primary"
                             style="background-color: #1AE0EC; color: black;">Go
                             somewhere</a>
                     </div>
