--- a/pnletusleadblue/pnletusleadblue.html
+++ b/pnletusleadblue/pnletusleadblue.html
@@ -31,7 +31,7 @@
             deserunt est, cumque,
             exercitationem incidunt, laborum totam <br> quisquam possimus non autem! Omnis, molestiae sapiente.
             <br><br><br><br>
-            <a href="../להוביל קדימה כחול צהוב/Landpage2LehovilKadima.html"> <button class="custom-button"
+            <a href="../let us lead you blue/leaduforwardbluue.html"> <button class="custom-button"
                     style="background-color: #1AE0EC; color: black;">Veiw
                     Project</button>
             </a>
